# my-mcp-module

./: .gitignore  README.md  mcp_client.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: list_tools.py
scripts/: run_in_venv.sh  setup_venv.sh
src/my_mcp_module/: mcp_client.py
